# aravis-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CameraController.h  MainWindow.h  VideoWidget.h
src/: CameraController.cpp  MainWindow.cpp  VideoWidget.cpp  main.cpp
